syntax = "proto3";

option go_package = "nem/idl/gen";
option java_multiple_files = true;
option java_package = "github.com/nuzur/nem";
option java_outer_classname = "Enum";

package nem;


import "enum_value.proto";
import "google/protobuf/timestamp.proto";

message Enum {  
    string uuid = 1;
    int64 version = 2;
    string identifier = 3;
    repeated EnumValue static_values = 4;
    bool remote_values = 5;
    EnumStatus status = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
    string created_by_uuid = 9;
    string updated_by_uuid = 10;    
}

enum EnumStatus { 
    ENUM_STATUS_INVALID = 0;
    ENUM_STATUS_ACTIVE = 1;
    ENUM_STATUS_DISABLED = 2;
}
